laptop to desktop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,216 @@
+* {
+    box-sizing: border-box;
+}
+
+
+
 body {
+    margin: 0;
+    background-image: url(../images/prism.png);
+}
+
+/* all pages */
+.name {
+    margin: auto;
+    overflow: hidden;
+    padding: 0;
+    width: 960px;
+}
+/* all pages */
+.header {
+    background: white;
+    border-bottom: solid 2px #cccccc;
+}
+/* all pages */
+h1, h2 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #4aaaa5;
+    border-bottom: solid 2px #cccccc;
+}
+/* all pages */
+h2 {
+    padding-bottom: 10px;
+}
+/* all pages */
+h1 {
+    background-color: #4aaaa5;
+    color: white;
+    margin: 0;
+    display: inline;
+    padding-bottom: 13.5px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+/* all pages */
+nav {
+    float: right;
+    color: black;
+    padding-left: 0;
+    margin-bottom: 0;
+}
+
+ul {
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+    padding-left: 10px
+}
+
+li {
+    display: inline;
+}
+/* all pages */
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    border-top: 8px solid #4aaaa5;
+   background-color: white;
+   height: 100px;
 
 }
+ .lower {
+     position: absolute;
+     bottom: left;
+ }
+
+
+/* only for about me page */
+p {
+    font-family: Arial, Helvetica, sans-serif;
+   
+}
+/* only for about me page */
+.area {
+    width: 960px;
+    background-color: white;
+    margin: auto;
+    height: 350px;
+    padding: 20px;
+}
+
+/* only for about me page */
+    img{
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+
+
+
+
+
+/* only for contact page */
+.areaForm {
+    width: 960px;
+    background-color: white;
+    margin: auto;
+    height: 400px;
+    padding: 20px;
+    
+}
+
+
+
+/* only for contact page */
+form {
+    width: auto
+}
+
+input {
+    width: 97%;
+    margin: 10px;
+    margin-left: 0px;
+}
+
+label {
+    margin: 10px;
+    margin-left: 0px;
+}
+
+textarea {
+    margin: 10px;
+    width: 97%;
+    height: 50px;
+    margin-left: 0px
+}
+
+button {
+    margin: 10px;
+    color: white;
+    background-color: #4aaaa5;
+    text-align: center;
+    display: inline-block;
+    margin-left: 0px;
+}
+
+
+
+
+
+
+/* only for porfolio page */
+.areaPort {
+    width: 960px;
+    background-color: white;
+    margin: auto;
+    height: 600px;
+    padding: 20px;
+}
+/* only for portfolio */
+    .column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    padding-left: 0px;
+    position: relative;
+}
+
+.picture {
+    height: auto;
+    position: relative;
+    display: inline-block;
+    margin: 8px;
+    margin-left: 0;
+}
+
+.text {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    bottom: -15px;
+}
+
+
+h4 {
+    background-color: #4aaaa5;
+    /* better look for now */
+    display: inline-blok;
+    font-size: 30px;
+    color: white;
+    
+}
+
+
+.biopic {
+    float: left;
+    width: 200px;
+    height: 200px;
+    padding-right: 10px;
+}
+
+
+@media only screen and (max-width: 860px) {
+    .header {
+        width: 400px;
+    }
+}
+
+
+
